2013-11-29  Carl Hetherington  <cth@carlh.net>

	* Version 1.38 released.

2013-11-29  Carl Hetherington  <cth@carlh.net>

	* Add option to join input files together
	to help with multiple VOB files from DVDs.

	* Fix build for 32-bit versions of OS X.

2013-11-27  Carl Hetherington  <cth@carlh.net>

	* Version 1.37 released.

2013-11-27  Carl Hetherington  <cth@carlh.net>

	* Version 1.36 released.

2013-11-27  Carl Hetherington  <cth@carlh.net>

	* Version 1.35 released.

2013-11-26  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Lilian Lefranc.

	* A whole load of fixes for lots of bugs when handling filenames
	using non-Latin characters on Windows.

2013-11-22  Carl Hetherington  <cth@carlh.net>

	* Version 1.34 released.

2013-11-22  Carl Hetherington  <cth@carlh.net>

	* Fix both OS X and Windows installers.

2013-11-21  Carl Hetherington  <cth@carlh.net>

	* Version 1.33 released.

2013-11-21  Carl Hetherington  <cth@carlh.net>

	* Fix Ubuntu 13.04 build.

2013-11-20  Carl Hetherington  <cth@carlh.net>

	* Version 1.32 released.

2013-11-20  Carl Hetherington  <cth@carlh.net>

	* Version 1.31 released.

2013-11-20  Carl Hetherington  <cth@carlh.net>

	* Add primitive hints dialogue box.

2013-11-17  Carl Hetherington  <cth@carlh.net>

	* Fix specified-server discovery.

	* Version 1.30 released.

2013-11-17  Carl Hetherington  <cth@carlh.net>

	* Speculative fix for servers crashing with different
	locales to clients.

2013-11-16  Carl Hetherington  <cth@carlh.net>

	* Bump bundled FFmpeg version to current git master.

	* Fix erroneous reset of visible channels in audio
	level dialog when changing gain.

2013-11-15  Carl Hetherington  <cth@carlh.net>

	* Use 2 decimal places for gamma controls instead
	of 1.

2013-11-14  Carl Hetherington  <cth@carlh.net>

	* Support modification of certain properties when
	there are several selected pieces of content.

	* Add server configuration back in.
