@@ -61,12 +61,12 @@ File "%static_deps%/bin/libssh.dll"
 File "%static_deps%/bin/libstdc++-6.dll"
 File "%static_deps%/bin/zlib1.dll"
 File "%static_deps%/bin/libjpeg-8.dll"
-File "%static_deps%/bin/wxbase294u_gcc_custom.dll"
-File "%static_deps%/bin/wxmsw294u_core_gcc_custom.dll"
-File "%static_deps%/bin/wxmsw294u_adv_gcc_custom.dll"
-File "%static_deps%/bin/wxmsw294u_richtext_gcc_custom.dll"
-File "%static_deps%/bin/wxmsw294u_html_gcc_custom.dll"
-File "%static_deps%/bin/wxbase294u_xml_gcc_custom.dll"
+File "%static_deps%/bin/wxbase30u_gcc_custom.dll"
+File "%static_deps%/bin/wxmsw30u_core_gcc_custom.dll"
+File "%static_deps%/bin/wxmsw30u_adv_gcc_custom.dll"
+File "%static_deps%/bin/wxmsw30u_richtext_gcc_custom.dll"
+File "%static_deps%/bin/wxmsw30u_html_gcc_custom.dll"
+File "%static_deps%/bin/wxbase30u_xml_gcc_custom.dll"
 File "%static_deps%/bin/libcairo-2.dll"
 File "%static_deps%/bin/libfreetype-6.dll"
 File "%static_deps%/bin/libgthread-2.0-0.dll"
