@@ -1,3 +1,7 @@
+2013-11-30  Carl Hetherington  <cth@carlh.net>
+
+	* Fix windows build.
+
 2013-11-29  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.38 released.
